# NeuroForge

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  docker-compose.yaml
cmake/: Config.cmake.in
config/: config.in.h
examples/: build.sh
examples/sum/: CMakeLists.txt
examples/xor/: CMakeLists.txt  main.cpp
include/internal/: attribute.hpp  log.hpp  random_engine.hpp
include/neuro/: activation.hpp  individual.hpp  layer.hpp  neural_network.hpp  neuro.hpp  population.hpp  types.hpp
include/neuro/capabilities/: i_layer_operation.hpp  i_layer_structure.hpp  i_layer_weight.hpp  i_neural_network_iterable.hpp  i_neural_network_parameter.hpp  i_neural_network_runner.hpp  i_neural_network_structure.hpp
include/neuro/common/: i_crossable.hpp  i_iterable.hpp
include/neuro/exceptions/: exception.hpp  exceptions.hpp  invalid_network_architecture_exception.hpp
include/neuro/impl/: dense_layer.hpp  impl.hpp  individual.hpp  neural_network.hpp  population.hpp
include/neuro/impl/population/: genetic_population.hpp  population.hpp
include/neuro/impl/strategies/: back_propagation_trainable.hpp  genetic_trainable.hpp  reinforcement_trainable.hpp
include/neuro/interfaces/: i_individual.hpp  i_layer.hpp  i_neural_network.hpp  i_population.hpp  i_stateful_layer.hpp  interfaces.hpp
include/neuro/interfaces/common/: i_neural_operable.hpp
include/neuro/interfaces/layer/: i_layer.hpp  i_stateful_layer.hpp
include/neuro/interfaces/neural_network/: i_neural_network.hpp
include/neuro/interfaces/population/: i_genetic_population.hpp  i_population.hpp
include/neuro/interfaces/strategies/: i_back_propagation_trainable.hpp  i_genetic_trainable.hpp  i_reinforcement_trainable.hpp
include/neuro/makers/: activation.hpp
include/neuro/strategies/: back_propagation_trainable.hpp  back_propagation_trainer.hpp  genetic_trainable.hpp  genetic_trainer.hpp  i_strategy_evolution.hpp  reinforcement_trainable.hpp  reinforcement_trainer.hpp  strategies.hpp
include/neuro/utils/: activation.hpp  random_engine.hpp  ref_proxy.hpp  utils.hpp
include/neuro/utils/interfaces/: i_iterable.hpp
scripts/: build.sh  clean.sh  copy-package.sh  debug.sh  run.sh  start.sh
src/: main.cpp
src/internal/: random_engine.cpp
src/neuro/: activation.cpp  individual.cpp  layer.cpp  neural_network.cpp  population.cpp  util.cpp
src/neuro/exceptions/: exception.cpp  invalid_network_architecture_exception.cpp
src/neuro/impl/: dense_layer.cpp  individual.cpp  neural_network.cpp  population.cpp
src/neuro/strategies/: genetic_trainer.cpp
src/neuro/utils/: random_engine.cpp  ref_proxy.cpp
tests/: CMakeLists.txt  build.sh  individual_test.cpp  main.cpp  neural_network.cpp  population_test.cpp  run.sh
tests/common/: measure.hpp
tests/impl/: dense_layer_test.cpp  individual_test.cpp  population_test.cpp
tests/performance/: evolution_population.cpp
tests/sum/: main.cpp
tests/unit/: CMakeLists.txt
tests/unit/impl/: dense_layer_test.cpp  individual_test.cpp  neural_network.cpp  population_test.cpp
tests/unit/interfaces/: i_individual_test.hpp  i_layer_test.hpp  i_neural_network_test.hpp
tests/unit/maker/: activation.cpp
tests/unit/strategies/: genetic_trainer_test.cpp
tests/xor/: CMakeLists.txt  main.cpp
